Fixes #1477 Fixes issue with missing margin from (x) wide field on mobile

--- a/src/definitions/collections/form.less
+++ b/src/definitions/collections/form.less
@@ -676,7 +676,17 @@
   .ui.form .four.fields > .fields,
   .ui.form .four.fields > .field,
   .ui.form .five.fields > .fields,
-  .ui.form .five.fields > .field {
+  .ui.form .five.fields > .field,
+  .ui.form .six.fields > .fields,
+  .ui.form .six.fields > .field,
+  .ui.form .seven.fields > .fields,
+  .ui.form .seven.fields > .field,
+  .ui.form .eight.fields > .fields,
+  .ui.form .eight.fields > .field,
+  .ui.form .nine.fields > .fields,
+  .ui.form .nine.fields > .field,
+  .ui.form .ten.fields > .fields,
+  .ui.form .ten.fields > .field {
     width: @oneColumn !important;
     margin: @fieldMargin;
     padding-left: 0%;
@@ -781,6 +791,7 @@
   .ui.form .fields > .fifteen.wide.field,
   .ui.form .fields > .sixteen.wide.field {
     width: @oneColumn !important;
+    margin: @fieldMargin;
     padding-left: 0%;
     padding-right: 0%;
   }
